# avalanche-installer

./: Cargo.toml  README.md
examples/: avalanchego_github_download_latest.rs  download.rs  download_avalanchego.rs  download_subnet_evm.rs
src/: avalanchego.rs  github.rs  lib.rs
src/avalanchego/: github.rs  mod.rs  s3.rs
src/subnet_evm/: github.rs
