[package]
name = "avalanche-installer"
version = "0.0.61" # https://crates.io/crates/avalanche-installer
edition = "2021"
rust-version = "1.68"
publish = true
description = "Avalanche installer"
repository = "https://github.com/ava-labs/avalanche-installer"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
aws-manager = { version = "0.25.5", features = ["s3"] } # https://github.com/gyuho/aws-manager/tags
compress-manager = "0.0.7"
log = "0.4.17"
random-manager = "0.0.5"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95" # https://github.com/serde-rs/json
tokio = "1.27.0" # https://github.com/tokio-rs/tokio/releases

[dev-dependencies]
env_logger = "0.10.0"
tempfile = "3.5.0"
