[package]
name = "avalanche-installer"
version = "0.0.68" # https://crates.io/crates/avalanche-installer
edition = "2021"
rust-version = "1.69"
publish = true
description = "Avalanche installer"
repository = "https://github.com/ava-labs/avalanche-installer"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
compress-manager = "0.0.7"
log = "0.4.17"
random-manager = "0.0.5"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96" # https://github.com/serde-rs/json
tokio = { version = "1.28.0", features = ["full"] } # https://github.com/tokio-rs/tokio/releases

[dev-dependencies]
env_logger = "0.10.0"
