[package]
name = "avalanche-installer"
version = "0.0.77" # https://crates.io/crates/avalanche-installer
edition = "2021"
rust-version = "1.70"
publish = true
description = "Avalanche installer"
repository = "https://github.com/ava-labs/avalanche-installer"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
compress-manager = "0.0.10"
log = "0.4.18"
random-manager = "0.0.5"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96" # https://github.com/serde-rs/json
tokio = { version = "1.28.2", features = ["full"] } # https://github.com/tokio-rs/tokio/releases

[dev-dependencies]
env_logger = "0.10.0"
